--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             class="rounded-circle" 
             src="img/avatarka.jpg" 
             alt="Вероника Беляева">
-            <span class="card-text">Вероника Беляева</span>
+            <span class="me-2" class="card-text">Вероника Беляева</span>
             <a href="#" class="btn justify-content-md-end btn-secondary">Редактировать</a>
           </div>
         </div>
